--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact our team croissant.com to get more information about homemade croissants"
+    />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Contact me</title>
+    <title>Contact me - croissant.com</title>
   </head>
   <body>
     <h1>🥐 Contact us</h1>
@@ -17,9 +21,9 @@
       for more info
     </p>
     <footer>
-      <a href="/" title="Home"> Homepage</a>
+      <a href="/" title="Homepage"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+      <a href="/contact.html" title="Contact us croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
