--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="You have to try the best croissant in towm"
+    />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Homepage</title>
+    <title>The best croissant in Kyiv - croissant.com</title>
   </head>
   <body>
     <h1>Welcome to my website</h1>
 
-    <p>
+    <p class="p-size">
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
     <footer>
-      <a href="/" title="Home"> Homepage</a>
+      <a href="/" title="Homepage"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+      <a href="/contact.html" title="Contact us croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
