--- a/photo.html
+++ b/photo.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Enjoy picture with explanation of a nutritional croissant value"
+    />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>An example of the perfect Croissant</title>
+    <title>An example of the perfect Croissant - croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
     <img
       src="/images/croissant.jpg"
-      alt="Homemade croissant"
+      alt="pic with explanation of a nutritional croissant`s value"
       class="croissant-photo"
     />
     <footer>
-      <a href="/" title="Home"> Homepage</a>
+      <a href="/" title="Homepage"> Homepage</a>
       <a href="/photo.html" title="Croissant photo"> Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+      <a href="/contact.html" title="Contact us croissant.com"> Contact</a>
     </footer>
   </body>
 </html>
